assets/scss/_normalize.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: var(--type-sans);
    color: var(--color-foreground);
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    -webkit-tap-highlight-color: transparent;
    font-feature-settings: 'case';
}

body, html {
    min-height: 100%;
    width: 100%;
    // scroll-behavior: smooth;
}

body { 
    background: var(--color-background);
}

.transition-fade {
    transition: 400ms 200ms ease-in-out;
    opacity: 1;
}
  
html.is-animating .transition-fade {
    opacity: 0;
    transition-delay: 0s;
}

r-grid {
    position: relative;
    padding: $spacing-32;
    gap: $spacing-160 $spacing-16;
    max-width: 1440px;
    margin: 0 auto;

    @include mobile {
        gap: $spacing-80 $spacing-16;
        padding: $spacing-16; 
    }

    &.header {
        z-index: 98;
        margin-bottom: $spacing-32;

        @include mobile {
            margin-bottom: $spacing-80;
        }
    }

    r-cell {
        &.--inline {
            margin-top: -$spacing-128 + $spacing-16;
            
            @include mobile { margin-top: -$spacing-64; }
        }
        
        &.--inline-mobile {
            @include mobile { margin-top: -$spacing-64; }
        }

        &[id] {
            padding-top: calc(var(--navigation-height) + #{$spacing-32});
            margin-top: calc((var(--navigation-height) * -1) - #{$spacing-32});
        }

        &.--divider {
            height: 1px;
            background: var(--color-border);

            &.--dotted {
                background: linear-gradient(
                    to right,
                    var(--color-border),
                    var(--color-border) 50%,
                    transparent 0,
                    transparent
                );
                background-size: 16px 1px;
            }
        }
    }
}

.main {
    margin-top: $spacing-160;
    @include mobile { margin-top: $spacing-128; }

    img {
        max-width: 100%;
        width: 100%;
        vertical-align: top;
        border-radius: var(--radius-inner);

        & + * { margin-top: $spacing-80; }

        & + figcaption,
        & + em {
            display: inline-block;
            margin-top: $spacing-8;
            font-style: normal;
            line-height: 1.5;
            color: var(--color-grey);

            &::before {
                content: '›';
                margin-right: $spacing-8;
            }
        }
    }

    figure {
        position: relative;

        & + figure { 
            margin-top: $spacing-16;
        }

        figcaption {
            &.--floating {
                position: absolute;
                margin-top: 0;
                bottom: $spacing-4;
                left: $spacing-4;
                background: var(--color-border);
                border-radius: calc(var(--radius-inner) / 2);
                padding: $spacing-4 $spacing-8 $spacing-2;

                &::before { display: none; }
            }
        }
    }
}

